--- a/src/ProjectSystemTools/ProjectSystemTools.csproj
+++ b/src/ProjectSystemTools/ProjectSystemTools.csproj
@@ -12,6 +12,8 @@
     <ExtensionInstallationFolder>Microsoft\ProjectSystemTools</ExtensionInstallationFolder>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="EnvDTE" Version="8.0.2" />
+    <PackageReference Include="EnvDTE80" Version="8.0.2" />
     <PackageReference Include="Microsoft.Build" Version="$(MicrosoftBuildVersion)" />
     <PackageReference Include="Microsoft.Build.Engine" Version="$(MicrosoftBuildEngineVersion)" />
     <PackageReference Include="Microsoft.Build.Framework" Version="$(MicrosoftBuildFrameworkVersion)" />
@@ -72,10 +74,17 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ProjectQuery\ProjectQueryDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Update="BuildLogExplorer\BuildTreeViewControl.xaml.cs">
       <DependentUpon>BuildTreeViewControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="ProjectQuery\ProjectQueryDialog.xaml.cs">
+      <DependentUpon>ProjectQueryDialog.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
