more changes to initial interface (add Task return types)

--- a/src/LogProviders/LogProviders.csproj
+++ b/src/LogProviders/LogProviders.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Utilities" Version="$(MicrosoftVisualStudioUtilitiesVersion)" />
     <PackageReference Include="System.Composition" Version="$(SystemCompositionVersion)" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LogModel\LogModel.csproj" />
+  </ItemGroup>
 </Project>
