Update azure-pipelines.yml for Azure Pipelines

--- a/eng/azure-pipelines.yml
+++ b/eng/azure-pipelines.yml
@@ -1,7 +1,16 @@
-# PR trigger
+# Branches that trigger a build on commit
+trigger:
+  branches:
+    include:
+    - master
+    - feature/*
+
+# Branches that trigger builds on PR
 pr:
-- master
-- feature/*
+  branches:
+    include:
+    - master
+    - feature/*
 
 jobs:
 - job: Windows
