--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -27,7 +27,8 @@
     <MicrosoftVisualStudioTextManagerInterop100Version>10.0.30319</MicrosoftVisualStudioTextManagerInterop100Version>
     <MicrosoftVisualStudioUtilitiesVersion>16.6.30107.105</MicrosoftVisualStudioUtilitiesVersion>
     <MicrosoftServiceHubFrameworkVersion>2.6.92</MicrosoftServiceHubFrameworkVersion>
-    <StreamJsonRpcVersion>2.4.48</StreamJsonRpcVersion>
+    <StreamJsonRpc24Version>2.4.48</StreamJsonRpc24Version>
+    <StreamJsonRpc25Version>2.5.44</StreamJsonRpc25Version>
     <MicrosoftVSSDKBuildToolsVersion>16.7.3069</MicrosoftVSSDKBuildToolsVersion>
     <!-- Libs -->
     <SystemCompositionVersion>1.1.0</SystemCompositionVersion>
