Resolving editor errors

--- a/src/LogProviders/LogProviders.csproj
+++ b/src/LogProviders/LogProviders.csproj
@@ -34,4 +34,12 @@
   <ItemGroup>
     <ProjectReference Include="..\LogModel\LogModel.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="BuildLoggingResources.resx">
+      <GenerateSource>true</GenerateSource>
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:_GenerateResxSource</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
