--- a/src/LogProviders/LogProviders.csproj
+++ b/src/LogProviders/LogProviders.csproj
@@ -36,10 +36,23 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="RoslynLogging\RoslynLoggingResources.Designer.cs">
+      <DependentUpon>RoslynLoggingResources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="BuildLoggingResources.resx">
       <GenerateSource>true</GenerateSource>
       <SubType>Designer</SubType>
       <Generator>MSBuild:_GenerateResxSource</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="RoslynLogging\RoslynLoggingResources.resx">
+      <SubType>Designer</SubType>
+      <LastGenOutput>RoslynLoggingResources.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
