Add extra pkgdef for service on client side

--- a/src/ProjectSystemTools/Microsoft.VisualStudio.ProjectSystemTools.FrontEnd.csproj
+++ b/src/ProjectSystemTools/Microsoft.VisualStudio.ProjectSystemTools.FrontEnd.csproj
@@ -79,6 +79,12 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BrokeredService.pkgdef">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Icon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
