--- a/src/ProjectSystemTools/Microsoft.VisualStudio.ProjectSystemTools.FrontEnd.csproj
+++ b/src/ProjectSystemTools/Microsoft.VisualStudio.ProjectSystemTools.FrontEnd.csproj
@@ -42,9 +42,13 @@
     <PackageReference Include="Microsoft.VisualStudio.Utilities" Version="$(MicrosoftVisualStudioUtilitiesVersion)" />
     <PackageReference Include="StreamJsonRpc" Version="$(StreamJsonRpcVersion)" />
     <PackageReference Include="System.Composition" Version="$(SystemCompositionVersion)" />
+    <PackageReference Include="System.Collections.Immutable" Version="5.0.0-preview.8.20407.11" />
     <PackageReference Include="VSLangProj" Version="7.0.3301" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.ProjectSystem.LogModel">
+      <HintPath>..\..\..\project-system\artifacts\Debug\bin\Dlls\Microsoft.VisualStudio.ProjectSystem.LogModel.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System.Design" />
@@ -103,9 +107,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\LogModel\Microsoft.VisualStudio.ProjectSystemTools.Shared.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="BinaryLogEditor\BinaryLogEditorResources.Designer.cs">
