resolving package reference versions

--- a/src/LogModel/Microsoft.VisualStudio.ProjectSystemTools.Shared.csproj
+++ b/src/LogModel/Microsoft.VisualStudio.ProjectSystemTools.Shared.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Build.Framework" Version="$(MicrosoftBuildVersion)" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0-preview.8.20407.11" />
+    <PackageReference Include="StreamJsonRpc" Version="$(StreamJsonRpcVersion)" />
     <PackageReference Include="Microsoft.ServiceHub.Framework" Version="2.6.92" />
   </ItemGroup>
 
