--- a/src/Microsoft.VisualStudio.ProjectSystemTools.FrontEndShared/Microsoft.VisualStudio.ProjectSystemTools.FrontEndShared.csproj
+++ b/src/Microsoft.VisualStudio.ProjectSystemTools.FrontEndShared/Microsoft.VisualStudio.ProjectSystemTools.FrontEndShared.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace>Microsoft.VisualStudio.ProjectSystemTools.FrontEndShared</RootNamespace>
-    <AssemblyName>Microsoft.VisualStudio.ProjectSystemTools.FrontEndShared</AssemblyName>
+    <RootNamespace>Microsoft.VisualStudio.ProjectSystemTools.Shared</RootNamespace>
+    <AssemblyName>Microsoft.VisualStudio.ProjectSystemTools.Shared</AssemblyName>
     <IsProductComponent>false</IsProductComponent>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
