Suppress VSTHRD010 warnings
We should re-enable these in a future PR.

--- a/.editorconfig
+++ b/.editorconfig
@@ -78,3 +78,7 @@ csharp_new_line_before_catch = true
 csharp_new_line_before_finally = true
 csharp_new_line_before_members_in_object_initializers = true
 csharp_new_line_before_members_in_anonymous_types = true
+
+# VSTHRD010: Invoke single-threaded types on Main thread
+# TODO upgrade this to warning or error in future
+dotnet_diagnostic.VSTHRD010.severity = suggestion
