--- a/src/ProjectSystemTools/ProjectSystemTools.csproj
+++ b/src/ProjectSystemTools/ProjectSystemTools.csproj
@@ -15,7 +15,7 @@
     <!-- Disable warnings if there is a mismach of Embed Interop types. The Roslyn packages references some shell
          binaries without it, but Microsoft.VisualStudio.SDK.EmbedInteropTypes turns it on. Silencing the warning will
          mean we won't embed the things already not being embedded, but that's harmless. -->
-    <NoWarn>1762</NoWarn>
+    <NoWarn>$(NoWarn);1762</NoWarn>
 
     <!-- Work around dotnet/wpf#1718 for the time being -->
     <EmbedUntrackedSources>false</EmbedUntrackedSources>
