--- a/eng/azure-pipelines.yml
+++ b/eng/azure-pipelines.yml
@@ -3,6 +3,7 @@ trigger:
   branches:
     include:
     - master
+    - main
     - feature/*
 
 # Branches that trigger builds on PR
@@ -10,6 +11,7 @@ pr:
   branches:
     include:
     - master
+    - main
     - feature/*
 
 jobs:
