--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  
+  <!-- Search for public MS packages at https://dev.azure.com/dnceng/public/_packaging?_a=feed&feed=dotnet-public%40Local -->
+  
   <PropertyGroup>
     <VersionPrefix>1.0.1</VersionPrefix>
     <PreReleaseVersionLabel>beta1</PreReleaseVersionLabel>
@@ -9,25 +12,24 @@
     <UsingToolSymbolUploader>true</UsingToolSymbolUploader>
     <UsingToolNetFrameworkReferenceAssemblies>true</UsingToolNetFrameworkReferenceAssemblies>
     <!-- MSBuild -->
-    <MicrosoftBuildVersion>15.6.85</MicrosoftBuildVersion>
+    <MicrosoftBuildVersion>16.8.0</MicrosoftBuildVersion>
     <!-- Roslyn -->
     <MicrosoftVisualStudioLanguageServicesVersion>2.0.0</MicrosoftVisualStudioLanguageServicesVersion>
     <!-- VS SDK -->
-    <MicrosoftVisualStudioComponentModelHostVersion>15.4.27004</MicrosoftVisualStudioComponentModelHostVersion>
-    <MicrosoftVisualStudioCoreUtilityVersion>15.4.27004</MicrosoftVisualStudioCoreUtilityVersion>
-    <MicrosoftVisualStudioImageCatalogVersion>15.4.27004</MicrosoftVisualStudioImageCatalogVersion>
-    <MicrosoftVisualStudioEditorVersion>15.4.27004</MicrosoftVisualStudioEditorVersion>
-    <MicrosoftVisualStudioProjectSystemSDKVersion>15.3.224</MicrosoftVisualStudioProjectSystemSDKVersion>
-    <MicrosoftVisualStudioShell150Version>15.4.27004</MicrosoftVisualStudioShell150Version>
-    <MicrosoftVisualStudioShellFrameworkVersion>15.4.27004</MicrosoftVisualStudioShellFrameworkVersion>
-    <MicrosoftVisualStudioShellInterop140DesignTimeVersion>15.0.25726-Preview5</MicrosoftVisualStudioShellInterop140DesignTimeVersion>
-    <MicrosoftVisualStudioShellInterop150DesignTimeVersion>15.0.26932</MicrosoftVisualStudioShellInterop150DesignTimeVersion>
-    <MicrosoftVisualStudioShellInterop153DesignTimeVersion>15.0.26929</MicrosoftVisualStudioShellInterop153DesignTimeVersion>
-    <MicrosoftVisualStudioShellInterop90Version>9.0.30729</MicrosoftVisualStudioShellInterop90Version>
-    <MicrosoftVisualStudioTextManagerInterop100Version>10.0.30319</MicrosoftVisualStudioTextManagerInterop100Version>
-    <MicrosoftVisualStudioUtilitiesVersion>15.4.27004</MicrosoftVisualStudioUtilitiesVersion>
+    <MicrosoftVisualStudioComponentModelHostVersion>17.0.67-g9e37b637e6</MicrosoftVisualStudioComponentModelHostVersion>
+    <MicrosoftVisualStudioCoreUtilityVersion>17.0.0-previews-1-31321-016</MicrosoftVisualStudioCoreUtilityVersion>
+    <MicrosoftVisualStudioEditorVersion>17.0.30-g62d2639511</MicrosoftVisualStudioEditorVersion>
+    <MicrosoftVisualStudioImageCatalogVersion>17.0.0-previews-1-31321-016</MicrosoftVisualStudioImageCatalogVersion>
+    <MicrosoftVisualStudioInteropVersion>17.0.0-previews-1-31321-016</MicrosoftVisualStudioInteropVersion>
+    <MicrosoftVisualStudioInteropVersion>17.0.0-previews-1-31321-016</MicrosoftVisualStudioInteropVersion>
+    <MicrosoftVisualStudioProjectSystemSDKVersion>17.0.596-pre</MicrosoftVisualStudioProjectSystemSDKVersion>
+    <MicrosoftVisualStudioShell150Version>17.0.0-previews-1-31321-016</MicrosoftVisualStudioShell150Version>
+    <MicrosoftVisualStudioShellFrameworkVersion>17.0.0-previews-1-31321-016</MicrosoftVisualStudioShellFrameworkVersion>
+    <MicrosoftVisualStudioUtilitiesVersion>17.0.0-previews-1-31321-016</MicrosoftVisualStudioUtilitiesVersion>
+    <MicrosoftVisualStudioValidationVersion>17.0.11-alpha</MicrosoftVisualStudioValidationVersion>
     <!-- Libs -->
-    <SystemCompositionVersion>1.1.0</SystemCompositionVersion>
+    <SystemCompositionVersion>5.0.1</SystemCompositionVersion>
+    <SystemCollectionsImmutableVersion>5.0.0</SystemCollectionsImmutableVersion>
   </PropertyGroup>
   <PropertyGroup>
     <RestoreSources>
