Suppress VSTHRD002 and VSTHRD110

--- a/.editorconfig
+++ b/.editorconfig
@@ -78,3 +78,11 @@ csharp_new_line_before_catch = true
 csharp_new_line_before_finally = true
 csharp_new_line_before_members_in_object_initializers = true
 csharp_new_line_before_members_in_anonymous_types = true
+
+# VSTHRD110: Observe result of async calls
+# TODO upgrade this to warning or error in future
+dotnet_diagnostic.VSTHRD110.severity = suggestion
+
+# VSTHRD002: Synchronously waiting on tasks or awaiters may cause deadlocks
+# TODO upgrade this to warning or error in future
+dotnet_diagnostic.VSTHRD002.severity = suggestion
