--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ bld/
 
 # build tools that are created by repo-toolset
 .tools/
+.packages/
 
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
