--- a/eng/official.yml
+++ b/eng/official.yml
@@ -28,6 +28,9 @@ pool:
   demands: Cmd
   timeoutInMinutes: 90
 
+variables:
+- group: DotNet-Symbol-Publish
+
 # jobs:
 # - job: Phase_1
 #   displayName: Phase 1
