Add explicit compiler dependency

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Validation" Version="$(MicrosoftVisualStudioValidationVersion)" />
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.3.0-2.final" />
   </ItemGroup>
 
 </Project>
