Update Visual Studio package versions

--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -14,15 +14,15 @@
     <!-- Roslyn -->
     <MicrosoftVisualStudioLanguageServicesVersion>2.0.0</MicrosoftVisualStudioLanguageServicesVersion>
     <!-- VS SDK -->
-    <MicrosoftVisualStudioComponentModelHostVersion>17.0.67-g9e37b637e6</MicrosoftVisualStudioComponentModelHostVersion>
-    <MicrosoftVisualStudioCoreUtilityVersion>17.0.0-previews-1-31321-016</MicrosoftVisualStudioCoreUtilityVersion>
+    <MicrosoftVisualStudioComponentModelHostVersion>17.0.491</MicrosoftVisualStudioComponentModelHostVersion>
+    <MicrosoftVisualStudioCoreUtilityVersion>17.0.32112.339</MicrosoftVisualStudioCoreUtilityVersion>
     <MicrosoftVisualStudioEditorVersion>17.0.30-g62d2639511</MicrosoftVisualStudioEditorVersion>
-    <MicrosoftVisualStudioImageCatalogVersion>17.0.0-previews-1-31321-016</MicrosoftVisualStudioImageCatalogVersion>
-    <MicrosoftVisualStudioInteropVersion>17.0.0-previews-1-31321-016</MicrosoftVisualStudioInteropVersion>
+    <MicrosoftVisualStudioImageCatalogVersion>17.0.32112.339</MicrosoftVisualStudioImageCatalogVersion>
+    <MicrosoftVisualStudioInteropVersion>17.0.32112.339</MicrosoftVisualStudioInteropVersion>
     <MicrosoftVisualStudioProjectSystemSDKVersion>17.0.596-pre</MicrosoftVisualStudioProjectSystemSDKVersion>
-    <MicrosoftVisualStudioShell150Version>17.0.0-previews-1-31321-016</MicrosoftVisualStudioShell150Version>
-    <MicrosoftVisualStudioShellFrameworkVersion>17.0.0-previews-1-31321-016</MicrosoftVisualStudioShellFrameworkVersion>
-    <MicrosoftVisualStudioUtilitiesVersion>17.0.0-previews-1-31321-016</MicrosoftVisualStudioUtilitiesVersion>
+    <MicrosoftVisualStudioShell150Version>17.0.32112.339</MicrosoftVisualStudioShell150Version>
+    <MicrosoftVisualStudioShellFrameworkVersion>17.0.32112.339</MicrosoftVisualStudioShellFrameworkVersion>
+    <MicrosoftVisualStudioUtilitiesVersion>17.0.32112.339</MicrosoftVisualStudioUtilitiesVersion>
     <MicrosoftVisualStudioValidationVersion>17.0.11-alpha</MicrosoftVisualStudioValidationVersion>
     <!-- Libs -->
     <SystemCompositionVersion>5.0.1</SystemCompositionVersion>
