--- a/eng/azure-pipelines.yml
+++ b/eng/azure-pipelines.yml
@@ -15,7 +15,7 @@ pr:
 jobs:
 - job: Windows
   pool:
-    name: NetCore1ESPool-Public
+    name: NetCore-Public
     demands: ImageOverride -equals Build.Windows.Amd64.VS2022.Pre.Open
   variables:
     _os: Windows
