--- a/eng/azure-pipelines.yml
+++ b/eng/azure-pipelines.yml
@@ -16,7 +16,7 @@ jobs:
 - job: Windows
   pool:
     name: NetCore-Public
-    demands: ImageOverride -equals Build.Windows.Amd64.VS2022.Pre.Open
+    demands: ImageOverride -equals Windows.VS2022.Amd64.Open
   variables:
     _os: Windows
   strategy:
