--- a/eng/official.yml
+++ b/eng/official.yml
@@ -1,63 +1,101 @@
 # Licensed to the .NET Foundation under one or more agreements. The .NET Foundation licenses this file to you under the MIT license. See the LICENSE.md file in the project root for more information.
 
-resources:
-  repositories:
-  - repository: self
-    type: git
-    ref: main
-pool:
-  name: VSEngSS-MicroBuild2022-1ES
-  demands: Cmd
-  timeoutInMinutes: 90
+# Dotnet.project-system-tools
+# Official pipeline
+# URL: https://devdiv.visualstudio.com/DevDiv/_build?definitionId=15888&_a=summary
+
 variables:
   # Allows CodeQL to run on our Build job.
   # https://eng.ms/docs/cloud-ai-platform/devdiv/one-engineering-system-1es/1es-docs/codeql/configuring-codeql3000-ado-pipelines
   Codeql.Enabled: true
+  BuildConfiguration: Release
+  TeamName: DotNet-Project-System
+  TeamEmail: dotnetdevexproj@microsoft.com
+  SignType: real
 
-steps:
-- checkout: self
-  clean: true
-- task: MicroBuildSigningPlugin@4
-  displayName: Install Signing Plugin
-  inputs:
-    signType: real
-- task: MicroBuildSwixPlugin@4
-  displayName: Install Swix Plugin
-- task: BatchScript@1
-  displayName: Run CIBuild.cmd
-  inputs:
-    filename: eng\common\CIBuild.cmd
-    arguments: -configuration $(BuildConfiguration) /p:OfficialBuildId=$(BUILD.BUILDNUMBER) /p:DotNetSignType=$(SignType) /p:DotNetSymbolServerTokenMsdl=$(microsoft-symbol-server-pat) /p:DotNetSymbolServerTokenSymWeb=$(symweb-symbol-server-pat)
-    failOnStandardError: true
-- template: common\templates\steps\generate-sbom.yml
-- task: CopyFiles@2
-  displayName: 'Copy Files from: $(Build.SourcesDirectory) to: $(Build.ArtifactStagingDirectory)'
-  inputs:
-    SourceFolder: $(Build.SourcesDirectory)
-    Contents: |
-      artifacts\bin\**
-      artifacts\log\**
-      artifacts\VSSetup\**
-    TargetFolder: $(Build.ArtifactStagingDirectory)
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: $(Build.BuildNumber)'
-  inputs:
-    ArtifactName: $(Build.BuildNumber)
-    TargetPath: $(DropRoot)\Roslyn\$(Build.DefinitionName)
-- task: PublishSymbols@2
-  displayName: Create Symbol Index
-  inputs:
-    SymbolsPath: $(Build.ArtifactStagingDirectory)
-    SearchPattern: |
-      **/Microsoft.VisualStudio.ProjectSystem.Tools.dll
-      **/Microsoft.VisualStudio.ProjectSystem.Tools.pdb
-      **/Microsoft.VisualStudio.ProjectSystem.Tools.resources.dll
-    SymbolsFolder: $(Build.ArtifactStagingDirectory)
-    # NOTE: This produces a warning about indexing (if enabled) but will still publish the symbols. See: https://github.com/microsoft/azure-pipelines-tasks/issues/15605
-    IndexSources: false
-    PublishSymbols: true
-    SymbolServerType: TeamServices
-  continueOnError: True
-- task: MicroBuildCleanup@1
-  displayName: Perform Cleanup
-  condition: succeededOrFailed()
+resources:
+  repositories:
+  - repository: MicroBuildTemplate
+    type: git
+    name: 1ESPipelineTemplates/MicroBuildTemplate
+    ref: refs/tags/release
+
+extends:
+  template: azure-pipelines/MicroBuild.1ES.Official.yml@MicroBuildTemplate
+  parameters:
+    sdl:
+      sourceAnalysisPool: VSEngSS-MicroBuild2022-1ES
+      tsa:
+        enabled: true
+        onboard: true
+        configFile: $(Build.SourcesDirectory)/eng/TSAConfig.gdntsa
+      binskim:
+        enabled: true
+      credscan:
+        enabled: true
+      policheck:
+        enabled: true
+      sbom:
+        enabled: true
+    pool:
+      name: VSEngSS-MicroBuild2022-1ES
+    stages:
+    - stage: Build
+      displayName: Build
+      variables:
+        # https://devdiv.visualstudio.com/DevDiv/_library?itemType=VariableGroups&view=VariableGroupView&variableGroupId=434&path=DotNet-Project-System
+        # Variables used:
+        # - ApiScanConnectionString
+        - group: DotNet-Project-System
+      jobs:
+      - job: Build
+        templateContext:
+          mb:
+            signing:
+              enabled: true
+              signType: $(SignType)
+            swix:
+              enabled: true
+          outputParentDirectory: $(Build.SourcesDirectory)/artifacts
+          outputs:
+            - output: pipelineArtifact
+              displayName: Publish Build Artifacts
+              targetPath: $(Build.SourcesDirectory)/artifacts/
+              artifactName: $(Build.BuildNumber)
+              condition: succeededOrFailed()
+        
+        steps:
+          - task: BatchScript@1
+            displayName: Run CIBuild.cmd
+            inputs:
+              filename: eng\common\CIBuild.cmd
+              arguments: -configuration $(BuildConfiguration) /p:OfficialBuildId=$(BUILD.BUILDNUMBER) /p:DotNetSignType=$(SignType) /p:DotNetSymbolServerTokenMsdl=$(microsoft-symbol-server-pat) /p:DotNetSymbolServerTokenSymWeb=$(symweb-symbol-server-pat)
+              failOnStandardError: true
+          - template: /eng/common/templates-official/steps/generate-sbom.yml@self
+          - task: CopyFiles@2
+            displayName: 'Copy DLLs for Compliance checks'
+            inputs:
+              SourceFolder: '$(Build.SourcesDirectory)/artifacts'
+              Contents: |
+                bin\ProjectSystemTools\**\Microsoft.VisualStudio.ProjectSystem.Tools*.dll
+                bin\ProjectSystemTools\**\Microsoft.VisualStudio.ProjectSystem.Tools*.pdb
+                VSSetup\**\Microsoft.VisualStudio.ProjectSystem.Tools.vsix
+              TargetFolder: '$(Build.SourcesDirectory)\artifacts\DLLs'
+            continueOnError: true
+          - template: /eng/analyze-compliance.yml@self
+            parameters:
+              SoftwareVersion: '1.0'
+          - task: PublishSymbols@2
+            displayName: Create Symbol Index
+            inputs:
+              SymbolsPath: $(Build.SourcesDirectory)\artifacts\DLLs
+              SearchPattern: |
+                **/Microsoft.VisualStudio.ProjectSystem.Tools.dll
+                **/Microsoft.VisualStudio.ProjectSystem.Tools.pdb
+                **/Microsoft.VisualStudio.ProjectSystem.Tools.resources.dll
+              SymbolsFolder: $(Build.ArtifactStagingDirectory)
+              # NOTE: This produces a warning about indexing (if enabled) but will still publish the symbols. See: https://github.com/microsoft/azure-pipelines-tasks/issues/15605
+              IndexSources: false
+              PublishSymbols: true
+              SymbolServerType: TeamServices
+            continueOnError: True
